styles.css
/* General */

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'PT Sans', sans-serif;
}

h1, h2, h3, h4, h5 , h6 {
    font-family: 'Montserrat', sans-serif;
}

p {
    line-height: 1.3rem;
}

section {
    width: 100%;
    padding: 60px 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.section-header {
    text-align: center;
    width: 60%;
    margin-bottom: 20px;
}

.section-header h2 {
    font-size: 2rem;
    font-weight: bold;
    margin-bottom: 10px;
}

.section-header h3 {
    font-size: 1.4rem;
    margin-bottom: 10px;
}

.section-header {
    text-align: center;
    width: 60%;
    margin-bottom: 20px;
}

.section-header h2 {
    font-size: 2rem;
    font-weight: bold;
    margin-bottom: 10px;
}

.section-header p {
    font-size: 1.4rem;
    margin-bottom: 10px;
}

.btn-live, .btn-source {
    display: inline-block;
    padding: 10px 20px;
    background-color: white;
    cursor: pointer;
    transition: all .1s;
    font-size: .9rem;
    margin: 10px;
    border-radius: 12px;
    text-decoration: none;
}

.btn-live i, .btn-source i {
    margin-left: 6px;
}

@media only screen and (max-width: 991px) {
    .btn-live {
        border: none;
        color: white;
        background-color: #33b249;
    }

    .btn-source {
        border: none;
        color: white;
        background-color: #4681f4;
    }
}

@media only screen and (min-width: 991.1px) {
.btn-live:hover {
    box-shadow: inset 200px 0 0 #33b249;
    color: white;
}

.btn-source:hover {
    box-shadow: inset 200px 0 0 #4681f4;
    color: white;
}

.btn-live {
    border: 2px solid #33b249;
    color: black;
    background-color: white;
    box-shadow: inset 0px 0px 0px #33b249;
}

.btn-source{
    border: 2px solid #4681f4;
    color: black;
    background-color: white;
    box-shadow: inset 0px 0px 0px #4681f4;
}
}

/* Header & Navigation bar */

header {
    z-index: 2;
    background-color: #1d1f1d;
    box-shadow: 2px 2px 5px gray;
    width: 100%;
    height: 50px;
    display: flex;
    justify-content: space-between;
    position: fixed;
}

header a {
    text-decoration: none;
    color: white;
    margin-right: 10px;
}
  
#brand {
    font-weight: bold;
    font-size: 18px;
    display: flex;
    align-items: center;
    padding: 0 10px;
}
  
#brand a {
    color: white;
}
  
header ul {
    list-style: none;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}
  
header ul a {
    color: white;
}
  
header ul li {
    padding: 5px;
    margin-right: 5px;
}
  
#hamburger-icon {
    margin: auto 0;
    display: none;
    cursor: pointer;
    margin-right: 40px;
}
  
#hamburger-icon div {
    width: 35px;
    height: 3px;
    background-color: white;
    margin: 6px 0;
    transition: 0.4s;
}
  
.open .bar1 {
    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
    transform: rotate(-45deg) translate(-6px, 6px);
}
  
.open .bar2 {
    opacity: 0;
}
  
.open .bar3 {
    -webkit-transform: rotate(45deg) translate(-6px, -8px);
    transform: rotate(45deg) translate(-6px, -8px);
}
  
.open .mobile-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
}
  
.mobile-menu {
    z-index: 2;
    display: none;
    position: absolute;
    top: 50px;
    left: 0;
    height: 210px;
    width: 100%;
    background-color: #1d1f1d;
    box-shadow: 2px 2px 5px gray;
}
  
.mobile-menu li {
    margin-bottom: 10px;
}

.resume-link {
    background-color: #33b249;
    padding: 4px 6px;
}
  
@media only screen and (max-width: 991px) {
    header nav {
      display: none;
    }
  
    #hamburger-icon {
      display: block;
    }
}

@media only screen and (max-width: 500px) {
    .section-header p {
        font-size: 1.2rem;
    }
}

@media only screen and (min-width: 991.1px) {
    header ul li:hover {
        transform: scale(1.1);
        transition: 0.3s;
    }
}

/* Hero section */

#hero {
    width: 100%;
    height: 30vh;
    background-image: url(./images/farzad-p-xSl33Wxyc-unsplash.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-weight: bold;
    color: white;
    text-align: center;
    /* filter: grayscale(10); */
}

@media only screen and (max-height: 450px) {
    #hero {
        height: 100vh;
    }

    #hero h1 {
        font-size: 2rem;
    }

    #hero h2 {
        font-size: 1.5rem;
    }
}

#hero div {
    background-color: rgba(0,0,0,0.8);
    padding: 20px;
}

#hero h1 {
    font-size: 3rem;
    margin-bottom: 1rem;
    text-align: center;
}

#hero h2 {
    font-size: 2rem;
    text-align: center;
}

/* About section */

#about {
    box-shadow: 2px 2px 5px gray;
}

.about-container {
    width: 60%;
}

.about-bio {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.technologies {
    display: flex;
    width: 80%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 5px;
    width: 90%;
}

.technologies h3 {
    font-size: 1.2rem;
    padding: 10px;
    font-weight: 900;
    margin: 20px 0px;
}

.tech-stack {
    width: 90%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 8px;
}

.technology {
    width: 6rem;
    border: 2px solid #ADD8E6;
    border-radius: 6px;
    padding: 6px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4px;
    box-shadow: 2px 2px 5px #ADD8E6;
    background-color: white;
}

.technologies .technology i {
    font-size: 4rem;
}

.tech-used {
    margin-left: 10px;
}

.project-tech {
    font-size: 2.5rem;
    margin: 2px;
}

@media only screen and (max-width: 1200px) {
    .tech-stack {
        justify-content: flex-start;
        width: 100%;
    }
}
/* ... */

